[metadata]
name = api_json_encoder
version = attr: api_json_encoder.__version__
description = A JSON encoder that extends `FlaskJSONEncoder` and supports common data types
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
project_urls =
    Source Code = https://github.com/orabiw/common_flask_json_encoder

[options]
packages = find:
python_requires = >= 3.7
install_requires = flask

[options.packages.find]
where=src

[tool:pytest]
testpaths = tests
filterwarnings = error

[coverage:run]
branch = True
command_line = -m pytest -x
source = src/api_json_encoder/

[coverage:report]
show_missing = True
fail_under = 100

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
files = src/api_json_encoder, tests
python_version = 3.7
